syntax = "proto3";

option csharp_namespace = "ServicoGrpc";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);

  rpc TestingMethod (TestingMethodRequest) returns (TestingMethodReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message TestingMethodRequest{
	string testName = 1;
}

message TestingMethodReply{
	string testeMessage = 1;
}
